--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">SafeTravels</string>
+    <string name="app_name">safe travels</string>
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
@@ -10,4 +10,10 @@
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
     <string name="title_activity_maps">MapsActivity</string>
+    <string name="send_alert">Send Alert</string>
+    <string name="contacts">Contacts</string>
+    <string name="edit_contacts_text">Edit Emergency Contacts</string>
+    <string name="add_contact_text">Add Contact</string>
+    <string name="edit_notification_text">Edit Notification Settings</string>
+    <string name="notifications_text">Notifications</string>
 </resources>
