--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="header_logo_description">header logo</string>
     <string name="home_text">Home</string>
     <string name="map_text">Map</string>
+    <string name="toggleButtonText">start route</string>
 </resources>
