--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="map_text">Map</string>
     <string name="toggleButtonOn">Start Route</string>
     <string name="toggleButtonOff">End Route</string>
+    <string name="emergencyCallButton">Emergency Call</string>
 </resources>
