save contacts and send text with location

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="toggleButtonOn">Start Route</string>
     <string name="toggleButtonOff">End Route</string>
     <string name="emergencyCallButton">Emergency Call</string>
+    <string name="delete_text">Remove Contacts</string>
 </resources>
